# Notes-Manager

./: .gitignore  Cargo.toml  README.md
src/: main.rs
