[package]
name = "notes-manager"
version = "0.1.0"
edition = "2021"
authors = ["mazynoah"]
repository = "https://github.com/mazynoah/Notes-Manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
chrono = "0.4.23"
savefile = "0.11.0"
savefile-derive = "0.11.0"
